proj1/testing/error/notAReflector.inp
* Beta Gamma I II III (AAAA)
HELLO WORLD